<resources>
    <string name="app_name">GithubApp</string>
    <string name="username"> </string>
    <string name="search_user">Search User</string>
    <string name="_0">0</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="name"> </string>
    <string name="tablayout">tablayout</string>

    <string name="tab_1">Following</string>
    <string name="tab_2">Followers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="night_mode">Night Mode</string>
    <string name="favorite_user">Favorite User</string>
    <string name="settings">Settings</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>